--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
   @apply flex justify-center items-center;
 }
 
+.animate {
+  @apply transition-all duration-200;
+}
+
 ul li {
   @apply hover:text-teal-400 transition-all;
 }
